Version 0.4.7 (...)
===================
* Fixed typo in random_points.cc example. Thanks to Guo-Jie Gao (Osaka
* University) for pointing this out.

Version 0.4.6 (October 17th 2013)
=================================
* Fixed an issue with template instantiation in wall.cc that was causing
  compilation problems with new versions of Apple Xcode. Thanks to Barend
  Thijsse (Delft University of Technology) and Juan Pablo Cruz Pérez (Instituto
  de Física y Matemáticas) for pointing this out.
* Added routines to the container classes to compute a ghost Voronoi cell at
  any given location, as though an extra particle was inserted at that
  location
* Removed unused private variable in c_loops.hh
* Updated Doxyfile to 1.8.5

Version 0.4.5 (July 27th 2012)
==============================
* Removed "using namespace std" from the header files and added extra "std::"
  qualifiers on STL vectors and queues. This is to prevent naming conflicts
  with other libraries. Thanks to Florian Hoffmann (University of Luxembourg)
  for pointing this out.
* Fixed an error in the check_facets diagnostic routine. Thanks to Tristan
  Carrier-Baudouin (Université catholique de Louvain) for pointing this out.
* Fixed a memory leak in the new container_periodic class. Thanks to Massimo
  Marchi (Commissariat á l'Energie Atomique) for pointing this out.
* Removed some duplicate or unnecessary #include statements of the standard C++
  header files
* Fix small naming mismatch between cell.cc and cell.hh in plane_intersects
  and nplane routines, which would give a warning with Doxygen
* More changes for older MS Visual C++ compatability
* Updated Doxyfile to 1.8.1.1

Version 0.4.4 (January 17th 2012)
=================================
* Fixed an error in pointer arithmetic that was introduced in version 0.4,
  which would occur in cases where the delete stack was extended when a large
  number of vertices were being removed. Thanks to Jeff Johnson (Lawrence